kustomize/traefik/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      hostNetwork: false
      containers:
      - image: traefik
        imagePullPolicy: IfNotPresent
        name: traefik
        resources:
        readinessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        ports:
        - name: traefik
          containerPort: 9000
          protocol: TCP
        - name: http
          containerPort: 8000
          hostPort: 80
          protocol: TCP
        - name: https
          containerPort: 8443
          hostPort: 443
          protocol: TCP
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
        volumeMounts:
          - name: config
            mountPath: /config
            readOnly: true
          - name: data
            mountPath: /data
          - name: tmp
            mountPath: /tmp
        args:
          - "--configfile=/config/config.yaml"
          # - "--global.checknewversion"
          # - "--global.sendanonymoususage"
          # - "--entryPoints.traefik.address=:9000/tcp"
          # - "--entryPoints.web.address=:8000/tcp"
          # - "--entryPoints.websecure.address=:8443/tcp"
          # - "--api.dashboard=true"
          # - "--ping=true"
          # - "--providers.kubernetescrd"
          # - "--providers.kubernetesingress"
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
      securityContext:
        fsGroup: 65532
