kustomize/traefik/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: ClusterIP
  ports:
  - port: 9000
    name: traefik
    targetPort: traefik
    protocol: TCP
  - port: 80
    name: http
    targetPort: http
    protocol: TCP
  - port: 443
    name: https
    targetPort: https
    protocol: TCP
